# gptcli

./: .coveragerc  .env  .env.tests  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  Pipfile  README.md  conftest.py  main.py  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  run_unit_tests.sh  sample_response_data.json  setup.py
.claude/agents/: elite-code-reviewer.md
.github/workflows/: main.yml  python-publish.yml  quality_and_tests.yml  release.yml
automation/tests/: run_unit_tests_using_docker.sh
docs/development/: SETUP.md
gptcli/: __init__.py  _version.py  constants.py  definitions.py  main.py
gptcli/src/: api_helper.py  chat.py  cli.py  command_parser.py  decorators.py  definitions.py  errors.py  ingest.py  install.py  message.py  openai_api_helper.py  profiles.py  single_exchange.py  speech.py  storage.py  supported_models.py
gptcli/src/common/: api.py  cli.py  constants.py  decorators.py  encryption.py  file_io.py  fts.py  key_management.py  message.py  passphrase.py  storage.py  validators.py
gptcli/src/common/api/: openai.py
gptcli/src/modes/: chat.py  encryption_commands.py  nuke.py  ocr.py  optical_character_recognition.py  search.py  single_exchange.py
gptcli/test/: test_chat.py  test_cli.py  test_speech.py
gptcli/tests/: conftest.py  test_api_helper.py  test_chat.py  test_cli.py  test_ingest.py  test_install.py  test_main.py  test_message.py  test_openai_helper.py  test_single_exchange.py  test_storage.py
gptcli/tests/commands/: test_encryption_commands.py  test_nuke.py
gptcli/tests/common/: api.py  constants.py  test_constants.py  test_encryption.py  test_fts.py  test_key_management.py  test_passphrase.py  test_storage.py  test_validators.py
gptcli/tests/common/api/: test_openai.py
gptcli/tests/data/ingest/: empty_docx_file.docx  text_file_populated.txt
gptcli/tests/modes/: test_chat.py  test_encryption_commands.py  test_nuke.py  test_ocr.py  test_optical_character_recognition.py  test_se.py  test_single_exchange.py
scripts/: has_pipenv.sh  help.sh  update_uv_lock_version.py
src/main/: api_helper.py  ask_openai.py  chat.py  cli.py  install.py  machine.py  main.py  message.py  messages.py  openai_helper.py  openai_wrapper.py  polly.py  speech.py  storage.py  text_to_speech.py
src/test/: test_ask_openai.py  test_chat.py  test_install.py  test_machine.py  test_openai_helper.py  test_speech.py  test_text_to_speech.py
