[project]
authors = [{ name = "Damian Vonapartis", email = "damianosvon@gmail.com" }]
name = "dbc-gptcli"
version = "0.20.1"
description = "A CLI tool for talking to the Openai API"
readme = { file = "README.md", content-type = "text/markdown" }
license = "GPL-3.0"
keywords = ["openai", "gpt", "cli", "gptcli", "terminal", "chat", "api"]
dependencies = ["requests", "tiktoken", "filetype", "pypdf"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
]

[project.urls]
Repository = "https://github.com/deathbychocolate/gptcli"

[project.scripts]
gptcli = "gptcli.main:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_files = ["./pyproject.toml", "./gptcli/_version.py:__version__"]
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true

[tool.setuptools.packages.find]
include = ["gptcli*"]
exclude = ["gptcli/tests/*"]
