[project]
authors = [{ name = "Damian Vonapartis", email = "damianosvon@gmail.com" }]
name = "dbc-gptcli"
version = "0.21.3"
description = "A CLI tool for talking to the Openai API"
readme = { file = "README.md", content-type = "text/markdown" }
license = "GPL-3.0"
keywords = ["openai", "gpt", "cli", "gptcli", "terminal", "chat", "api"]
dependencies = ["requests", "prompt-toolkit", "tiktoken", "mistral-common", "filetype", "pypdf"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/deathbychocolate/gptcli"

[project.scripts]
gptcli = "gptcli.main:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_files = ["./pyproject.toml", "./gptcli/_version.py:__version__"]
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true

[tool.setuptools.packages.find]
include = ["gptcli*"]
exclude = ["gptcli/tests/*"]
