[project]
authors = [{ name = "Damian Vonapartis", email = "damianosvon@gmail.com" }]
name = "dbc-gptcli"
version = "0.23.2"
description = "A CLI tool for accessing OpenAI and Mistral AI LLMs"
readme = { file = "README.md", content-type = "text/markdown" }
license = "GPL-3.0"
keywords = ["openai", "mistral", "llm", "gpt", "cli", "gptcli", "terminal", "chat", "api"]
requires-python = ">=3.11"
dependencies = [
    "filetype>=1.2.0,<2.0.0",
    "requests>=2.32.4,<3.0.0",
    "prompt-toolkit>=3.0.51,<4.0.0",
    "pypdf>=5.7.0,<6.0.0",
    "tiktoken>=0.11.0,<1.0.0",
    "mistral-common>=1.8.4,<2.0.0",
    "validators>=0.35.0,<1.0.0",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "commitizen",
    "black",
    "isort",
    "mypy",
    "pre-commit",
    "autoflake",
    "types-requests",
    "nox",
    "build",
    "python-dotenv",
]

[project.urls]
Repository = "https://github.com/deathbychocolate/gptcli"

[project.scripts]
gptcli = "gptcli.main:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_files = ["./pyproject.toml", "./gptcli/_version.py:__version__"]
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
post_bump_hooks = ["python3 scripts/update_uv_lock_version.py"]

[tool.setuptools.packages.find]
include = ["gptcli*"]
exclude = ["gptcli/tests/*"]
